# oar

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  walkthrough.sh
examples/demo-vault/: README.md
oar/: __main__.py  mcp_server.py  mcp_tools.py
oar/cli/: _shared.py  add_note.py  build.py  compile.py  export.py  index_cmd.py  ingest.py  lint.py  main.py  query.py  search.py  validate.py
oar/compile/: classifier.py  compiler.py  concept_extractor.py  context_builder.py  (+4 more)
plans/: IMPLEMENTATION-BLUEPRINT.md
scripts/: setup-vault.sh
tests/: conftest.py  test_cli_add_note.py  test_cli_build.py  test_cli_compile.py  test_cli_compile_pending.py  test_cli_config.py  test_cli_export.py  test_cli_index_cmd.py  test_cli_ingest.py  test_cli_lint.py  test_cli_provider_wiring.py  test_cli_query.py  test_cli_query_save.py  test_cli_search.py  test_cli_search_serve.py  test_cli_validate.py  test_cluster_improvements.py  test_compile_classifier.py  test_compile_compiler.py  test_compile_concept_extractor.py  test_compile_context_builder.py  test_compile_incremental.py  test_core_config.py  test_core_frontmatter.py  test_core_hashing.py  test_core_link_graph.py  test_core_link_resolver.py  test_core_models.py  test_core_slug.py  test_core_state.py  test_core_vault.py  test_core_vault_ops.py  test_export_finetune.py  test_export_html.py  test_export_slides.py  test_index_cluster_detector.py  test_index_moc_builder.py  test_index_orphan_tracker.py  test_index_stats.py  test_index_tag_builder.py  (+31 more)
(+109 files in other folders)
