[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oar"
version = "0.1.0"
description = "Obsidian Agentic RAG — an AI-powered knowledge management CLI"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "rich>=13",
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "litellm>=1.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
oar = "oar.cli.main:app"
oar-mcp = "oar.mcp_server:main"

[tool.setuptools.packages.find]
include = ["oar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
